WIP 功能：进一步丰富树状命令 API